--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 --- 
-title: "Introduction to Statistical Computing in Political Sciennce"
+title: "Introduction to Statistical Computing in Political Science"
 author: "Marcy Shieh"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
