--- a/02-lecture-2.Rmd
+++ b/02-lecture-2.Rmd
@@ -2,7 +2,7 @@
 
 In this lecture, you will learn how to do everything you already do as a scholar but in a more organized and efficient manner. More specifically, you will learn how to do all these things in RStudio.
 
-# Why create a project?
+## Why create a project?
 
 You are probably used to storing all your project-related files in a project folder on your computer. And, you may tell yourself that if you wanted to send all the files to your collaborator, you can zip that folder up and upload everything on to your Box or Dropbox. Then your collaborator can unzip that folder, work on some files, and re-upload the files. But then you don't know which parts she edited unless you read her email, which *might* be detailed, but also might not be! You want to be prepared for the latter.
 
@@ -14,7 +14,7 @@ You also want to think ahead: many of the top journals in the discipline require
 
 So let's get started.
 
-# Creating a project in RStudio {#create-proj}
+## Creating a project in RStudio {#create-proj}
 
 The goal of this section is for you to be able to create a project in RStudio that you can connect to Github. Some of these steps are a review of what we learned in the previous lesson.
 
@@ -48,7 +48,7 @@ The goal of this section is for you to be able to create a project in RStudio th
   
 10. Check the “Open in New Session” box so you can have your projects (and misc non-project files) in different RStudio windows, but this is not necessary.
 
-# Pushing a R Markdown document to your Github repository {#push-git}
+## Pushing a R Markdown document to your Github repository {#push-git}
 
 In the previous lesson, you took the README.md file from your Github repository, edited it, and pushed your changes back on to the repository. In this lesson, you will learn how to create a document on your computer in RStudio and push it to the repository.
 
@@ -106,7 +106,7 @@ In the previous lesson, you took the README.md file from your Github repository,
 
 15. There, you will see the record of your changes and can click on the icons (as discussed in the previous lesson) to review or retrieve anything you deleted.
 
-# Writing a paper in R Markdown {#write-paper}
+## Writing a paper in R Markdown {#write-paper}
 
 Now you are hopefully more comfortable doing simple things with RStudio, R Markdown documents, Git, and GitHub. So now let's move on to how to do stuff that you already do and figure out how the Git workflow (in conjunction with RStudio) can make it better.
 
@@ -116,7 +116,7 @@ There are many R Markdown templates out there, even specific templates for speci
 
 For the sake of catering to everyone's needs, we are going to work with the  [papaja](https://crsh.github.io/papaja_man/introduction.html) R package. papaja, as you may have easily guessed, stands for "preparing APA journal articles." It's a package that's currently in the process of being developed so there might be some kinks here and there (though I haven't encountered any in my own work). Ultimately, this lesson is to give you a sense of how R Markdown templates work so you go out and explore on your own.
 
-## Prerequisites
+### Prerequisites
 
 Just so you know what is required to run the papaja R package, I'm going to do a breakdown for you. **You should have fulfilled all the prequisites if you completed the previous lesson.**
 
@@ -126,7 +126,7 @@ Just so you know what is required to run the papaja R package, I'm going to do a
 
 3. You need a TeX distribution, which you already do, from installing LaTeX in the first lesson.
 
-## Installing papaja
+### Installing papaja
 
 1. papaja is not yet available on CRAN (the Comprehensive R Archive Network), so you need to install it from the creator's GitHub. To do so, you need to install the `devtools` package by entering the following into your console.
 
@@ -152,7 +152,7 @@ Just so you know what is required to run the papaja R package, I'm going to do a
 
 The `devtools::` part of the command simply tells R where the `install_github` part of the command is coming from. There are cases where you may have loaded two packages and both packages have `install_github` as a command. Doing the double-colon simply ensures that you are specifying the package that the command is coming from. Since you have only loaded the devtools package so far, you don't need to specify that `install_github` is coming from the devtools package, but I just wanted to demonstrate this point in case you ever end up in such a conundrum.
     
-## Opening the template
+### Opening the template
 
 1. Go to File > New File > R Markdown.
 
@@ -170,7 +170,7 @@ The `devtools::` part of the command simply tells R where the `install_github` p
 
 4. The template appears.
 
-## Getting to know your APA R Markdown template
+### Getting to know your APA R Markdown template
 
 **Lines 1 to 64** is a form-like feature that you can fill out with your own information. This is called a [YAML front matter](https://en.wikipedia.org/wiki/YAML), which you can read more about on your own time. Basically, it's basically a form you can fill out to define what should be going on in the back end. Most of these fields should be pretty self-explanatory, but I'd like to point out a few things.
 
@@ -180,106 +180,107 @@ The `devtools::` part of the command simply tells R where the `install_github` p
 
 - **Lines 53-59** may sound ambiguous, but the official papaja page has definitions for each field on their [Rendering Options](https://crsh.github.io/papaja_man/r-markdown-components.html#rendering-options) section.
 
-### Let's talk about code chunks
+## Let's talk about code chunks
 
 Put your R commands in a [code chunk](https://rmarkdown.rstudio.com/lesson-3.html). With code chunks, you are basically telling RStudio, "hey, i need you to run this." Code chunks look like the following.
 
-<pre>
-```{r}
-[insert your R code here]
+````
+```{r}`r ''`
+# insert R code here
 ```
-</pre>
+````
 
 Of course, you can customize what you do tell your code chunks to do. Here are some examples, but for the full list of options, check out the [R Markdown Cheat Sheet - Section 5: Embed Code](https://rstudio.com/wp-content/uploads/2015/02/rmarkdown-cheatsheet.pdf).
 
 * `include = FALSE` tells R to run the code in the background but NOT show the results or the code on the R Markdown document. This is helpful if you want to show results in a chunk later in the file, but you want to run some commands in the current chunk.
 
-<pre>
-```{r include = FALSE}
-[insert your R code here]
+````
+```{r include = FALSE}`r ''`
+# insert R code here
 ```
-</pre>
-
-* `echo = FALSE` tells R to run the code in the background and not show the code in the R Markdown document, but to show the results. This is helpful for tables and graphics.
-
-<pre>
-```{r echo = FALSE}
-[insert your R code here]
+````
+  
+  * `echo = FALSE` tells R to run the code in the background and not show the code in the R Markdown document, but to show the results. This is helpful for tables and graphics.
+  
+````
+```{r echo = FALSE}`r ''`
+# insert R code here
 ```
-</pre>
+````
+  
+  * `message = FALSE` tells R to not show messsages generated by the comamnds in the code chunk. For instance, some packages might provide some messages (e.g., citations) but you do not want it to show up in your R Markdown document.
 
-* `message = FALSE` tells R to not show messsages generated by the comamnds in the code chunk. For instance, some packages might provide some messages (e.g., citations) but you do not want it to show up in your R Markdown document.
-
-<pre>
-```{r message = FALSE}
-[insert your R code here]
+````
+```{r message = FALSE}`r ''`
+# insert R code here
 ```
-</pre>
+````
 
-* `fig.cap = "..."` tells R to add a caption to your figure. You simply replace `...` with the caption.
-
-<pre>
-```{r fig.cap = "This is a photo of all my favorite NYC brownstones."}
-[insert your R code here]
+  * `fig.cap = "..."` tells R to add a caption to your figure. You simply replace `...` with the caption.
+  
+````
+```{r fig.cap = "This is a photo of all my favorite NYC brownstones."}`r ''`
+# insert R code here
 ```
-</pre>
+````
+  
+  * You may combine these options by separating them with a comma.
 
-* You may combine these options by separating them with a comma.
-
-<pre>
-```{r echo = FALSE, fig.cap = "This is a photo of all my favorite NYC brownstones."}
-[insert your R code here]
+  
+````
+```{r echo = FALSE, fig.cap = "This is a photo of all my favorite NYC brownstones.}`r ''`
+# insert R code here
 ```
-</pre>
-        
+````
+
 * You may even name your chunks. In this example, the code chunk is named "chart." Note that you do NOT separate the `r` and the name of your chunk with a comma.
-    
-<pre>
-```{r nycbrnst, echo = FALSE, fig.cap = "This is a photo of all my favorite brownstones."}
-[insert your R code here]
+
+````
+```{r nycbrnst, echo = FALSE, fig.cap = "This is a photo of all my favorite     brownstones."}`r ''`
+# insert R code here
 ```
-</pre>
-        
+````
+
 Now that you have an understanding of code chunks, let's explore the code chunks on the R Markdown template we downloaded.
 
 ## Code chunks in the papaja template
 
 **Lines 66-69** is where you put your packages. As you grow into a proficient R user, you are going to use many packages (not just devtools!) and you should load them all in a section that looks like this. In other words...
 
-<pre>
-```{r setup, include = FALSE}
-[load your packages using the library() function]
-[load your .bib file using the r_refs() function]
+````
+```{r  setup, include = FALSE}`r ''`
+# load your packages using the library() function
+# load your .bib file using the r_refs() function
 ```
-</pre>
+````
 
 **Lines 71-75** are where you can set your analysis preferences. The default appears to be code that sets a seed for a random number generator. You may need a seed when you run a say, k-means clustering algorithm, but I wouldn't worry too much about it right now.
 
 ## Body of the papaja template
 
 **Lines 79-94** shows headings for the document. This is how the headings will look like based on the number of hashes (#) they put. A good way to think about it is `#` is a the largest heading, and every `#` you add on makes the heading smaller. For a comprehensive list of headings, check out check out the [R Markdown Cheat Sheet - Section 3: Markdown](https://rstudio.com/wp-content/uploads/2015/02/rmarkdown-cheatsheet.pdf).
-
-# Methods (one hash - #)
-
-## Participants (two hashes - ##)
-
-## Material (two hashes - ##)
-
-## Procedure (two hashes - ##)
-
-## Data analysis (two hashes - ##)
-
-# Results (one hash - #)
-
-# Discussion (one hash - #)
-
-Now, you can create headings and subheadings and subsubheadings, etc.
-
-**Lines 97-106** is the last few pages of the document, which will be devoted to the bibliography. And much of the end of this template is some [TeX markup language](https://en.wikibooks.org/wiki/TeX), which dominates LaTeX but is only sometimes used in R Markdown documents. You don't have to change any of this, but here is some background on the building blocks.
+  
+  # Methods (one hash - #)
+  
+  ## Participants (two hashes - ##)
+  
+  ## Material (two hashes - ##)
+  
+  ## Procedure (two hashes - ##)
+  
+  ## Data analysis (two hashes - ##)
+  
+  # Results (one hash - #)
+  
+  # Discussion (one hash - #)
+  
+  Now, you can create headings and subheadings and subsubheadings, etc.
+  
+  **Lines 97-106** is the last few pages of the document, which will be devoted to the bibliography. And much of the end of this template is some [TeX markup language](https://en.wikibooks.org/wiki/TeX), which dominates LaTeX but is only sometimes used in R Markdown documents. You don't have to change any of this, but here is some background on the building blocks.
 
 - `\newpage` command just creates a new page and comes from the TeX language.
 - `\begingroup` begins a group and `\endgroup` ends a group. In essence, you're putting stuff in a box.
-- So you've built your box. Within that box, you want your bibliography to indent a certain way. With `\parindent`, you are indenting the first line of a paragraph (i.e., each new line) and with `\leftskip`, you can reduce the paragraph size from the left.
+  - So you've built your box. Within that box, you want your bibliography to indent a certain way. With `\parindent`, you are indenting the first line of a paragraph (i.e., each new line) and with `\leftskip`, you can reduce the paragraph size from the left.
 - The grouping and the formatting are for the bibliography, which the template inserts with the following HTML code. This template handles the bibliography style using HTML/CSS, but this might not be the case with all templates.
 
 ```
