needed to sound like a real git user

--- a/index.Rmd
+++ b/index.Rmd
@@ -18,6 +18,6 @@ The first hour of the course covers everything that students need to know to com
 
 You may access the [latest draft of the syllabus here](https://github.com/marcyshieh/ps811/blob/master/syllabus/ps811_fall2020_syllabus.pdf).
 
-All course materials are located at the [course GitHub folder](https://github.com/marcyshieh/ps811).
+All course materials are located at the [course GitHub repository](https://github.com/marcyshieh/ps811).
 
 If you have any questions about the materials, please contact me at [mshieh2@wisc.edu](mailto:mshieh2@wisc.edu).
